Fix footer alignment on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -215,8 +215,8 @@
 @include media-query($on-palm) {
     .footer-col {
         float: none;
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
+        //width: -webkit-calc(100% - (#{$spacing-unit} / 2));
+        //width:         calc(100% - (#{$spacing-unit} / 2));
     }
 }
 
